--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,14 +16,8 @@
     "@acme/api": "^0.1.0",
     "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
+    "@acme/ui": "^0.1.0",
     "@t3-oss/env-nextjs": "^0.6.0",
-    "@tanstack/react-query": "^4.29.23",
-    "@tanstack/react-query-devtools": "^4.29.23",
-    "@tanstack/react-query-next-experimental": "5.0.0-alpha.80",
-    "@trpc/client": "^10.34.0",
-    "@trpc/next": "^10.34.0",
-    "@trpc/react-query": "^10.34.0",
-    "@trpc/server": "^10.34.0",
     "next": "^13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
