--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,27 +6,24 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
-    "lint": "eslint .",
+    "lint": "SKIP_ENV_VALIDATION=1  eslint .",
     "lint:fix": "pnpm lint --fix",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
-    "@trpc/client": "^10.34.0",
-    "@trpc/server": "^10.34.0",
-    "superjson": "1.9.1",
-    "zod": "^3.21.4"
+    "@clerk/nextjs": "^4.21.13",
+    "@t3-oss/env-nextjs": "^0.6.0",
+    "@trpc/client": "^10.33.1",
+    "@trpc/server": "^10.33.1",
+    "stripe": "^12.11.0",
+    "superjson": "1.12.4",
+    "zod": "^3.21.4",
+    "zod-form-data": "^2.0.1"
   },
   "devDependencies": {
-    "@acme/eslint-config": "^0.2.0",
-    "eslint": "^8.45.0",
+    "@acme/eslint-config": "0.2.0",
+    "eslint": "^8.44.0",
     "typescript": "^5.1.6"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "@acme/eslint-config/base"
-    ]
   }
 }
