--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ packages:
   - apps/expo
   - apps/nextjs
   - packages/api
+  - packages/ui
   - packages/auth
   - packages/db
   - packages/config/*
