--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -8,8 +8,6 @@
     "dev": "expo start --ios",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
-    "lint": "eslint .",
-    "lint:fix": "pnpm lint --fix",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
@@ -34,7 +32,6 @@
     "superjson": "1.9.1"
   },
   "devDependencies": {
-    "@acme/api": "^0.1.0",
     "@acme/eslint-config": "^0.2.0",
     "@acme/tailwind-config": "^0.1.0",
     "@babel/core": "^7.22.9",
@@ -45,7 +42,7 @@
     "@types/react": "^18.2.15",
     "eslint": "^8.45.0",
     "postcss": "^8.4.26",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6"
   },
   "eslintConfig": {
