--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -13,8 +13,6 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@acme/api": "^0.1.0",
-    "@acme/auth": "^0.1.0",
     "@acme/db": "^0.1.0",
     "@acme/ui": "^0.1.0",
     "@t3-oss/env-nextjs": "^0.6.0",
@@ -34,7 +32,7 @@
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.45.0",
     "postcss": "^8.4.26",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6"
   },
   "eslintConfig": {
