--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -7,8 +7,7 @@
     "clean": "git clean -xdf .expo .turbo node_modules",
     "dev": "expo start --ios",
     "dev:android": "expo start --android",
-    "dev:ios": "expo start --ios",
-    "type-check": "tsc --noEmit"
+    "dev:ios": "expo start --ios"
   },
   "dependencies": {
     "@expo/metro-config": "^0.10.6",
