--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,13 @@
   ],
   "tailwindCSS.experimental.configFile": "./packages/config/tailwind/index.ts",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "cSpell.words": [
+    "elysia",
+    "LEADERBOARD",
+    "replicache",
+    "superjson",
+    "tailwindcss",
+    "VIDEOGRAPHY"
+  ]
 }
