--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "pnpm with-env next build",
+    "build": "bun with-env next build",
     "clean": "git clean -xdf .next .turbo node_modules",
-    "dev": "pnpm with-env next dev",
+    "dev": "bun with-env next dev",
     "lint": "dotenv -v SKIP_ENV_VALIDATION=1 next lint",
-    "lint:fix": "pnpm lint --fix",
-    "start": "pnpm with-env next start",
+    "lint:fix": "bun lint --fix",
+    "start": "bun with-env next start",
     "type-check": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@acme/db": "^0.1.0",
     "@acme/ui": "^0.1.0",
     "@t3-oss/env-nextjs": "^0.6.0",
     "next": "^13.4.10",
@@ -34,13 +33,5 @@
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "@acme/eslint-config/base",
-      "@acme/eslint-config/nextjs",
-      "@acme/eslint-config/react"
-    ]
   }
 }
