--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,8 +39,8 @@
     "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
-    "@acme/eslint-config": "0.2.0",
-    "@acme/tailwind-config": "0.1.0",
+    "@acme/eslint-config": "^0.2.0",
+    "@acme/tailwind-config": "^0.1.0",
     "@tanstack/react-table": "^8.9.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
