--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "bun with-env next build",
+    "build": "pnpm with-env next build",
     "clean": "git clean -xdf .next .turbo node_modules",
-    "dev": "bun with-env next dev",
+    "dev": "pnpm with-env next dev",
     "lint": "dotenv -v SKIP_ENV_VALIDATION=1 next lint",
-    "lint:fix": "bun lint --fix",
-    "start": "bun with-env next start",
+    "lint:fix": "pnpm lint --fix",
+    "start": "pnpm with-env next start",
     "type-check": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
