--- a/packages/config/tailwind/package.json
+++ b/packages/config/tailwind/package.json
@@ -11,5 +11,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "@radix-ui/colors": "^1.0.0"
   }
 }
