--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -59,6 +59,7 @@
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "@tiptap/suggestion": "^2.0.3",
+    "@uploadthing/react": "^5.2.0",
     "@upstash/redis": "^1.22.0",
     "@vercel/analytics": "^1.0.1",
     "class-variance-authority": "^0.6.0",
@@ -76,6 +77,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.1",
     "react-textarea-autosize": "^8.5.0",
     "replicache": "13.0.0-beta.1",
@@ -88,6 +90,7 @@
     "tippy.js": "^6.3.7",
     "tiptap-markdown": "^0.8.1",
     "ulid": "^2.3.0",
+    "uploadthing": "^5.2.1",
     "y-partykit": "0.0.0-fd49ef8",
     "yjs": "^13.6.4",
     "zod": "^3.21.4",
