--- a/packages/config/tailwind/package.json
+++ b/packages/config/tailwind/package.json
@@ -13,6 +13,7 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
-    "@radix-ui/colors": "^1.0.0"
+    "@radix-ui/colors": "^1.0.0",
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
